[FIX] sign: fix double scroll bar in sign template
Issue:
When you open a sign template you can see there are double scroll bars on the
iframe

Cause:
The sign item toolbar placed on the left side is given 100% height and  1px
border which is causing the iframe body to overflow

Solution:
The 100% height given to the toolbar is changed with -webkit-fill-available

task-4014519

closes odoo/enterprise#65609

--- a/sign/static/src/css/iframe.css
+++ b/sign/static/src/css/iframe.css
@@ -328,7 +328,7 @@
 .o_sign_field_type_toolbar {
     width: 14rem;
     z-index: 1030;
-    height: 100%;
+    height: -webkit-fill-available;
     position: absolute;
     border: 1px solid rgb(var(--gray-300-rgb)) !important;
 }
